--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://kit.fontawesome.com/40f81a5b78.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
